Optimize venue queries to use direct join ons to obtain show count

--- a/projects/01_fyyur/templates/pages/search_venues.html
+++ b/projects/01_fyyur/templates/pages/search_venues.html
@@ -8,7 +8,7 @@
 		<a href="/venues/{{ venue.id }}">
 			<i class="fas fa-music"></i>
 			<div class="item">
-				<h5>{{ venue.name }} ({{ venue.city }}, {{ venue.state }})</h5>Upcoming Shows: {{ venue.shows|length }}
+				<h5>{{ venue.name }} ({{ venue.city }}, {{ venue.state }})</h5>Upcoming Shows: {{ venue.num_upcoming_shows }}
 			</div>
 		</a>
 	</li>
