--- a/projects/01_fyyur/templates/pages/venues.html
+++ b/projects/01_fyyur/templates/pages/venues.html
@@ -9,7 +9,7 @@
 			<a href="/venues/{{ venue.id }}">
 				<i class="fas fa-music"></i>
 				<div class="item">
-					<h5>{{ venue.name }}</h5>Upcoming Shows: {{ venue.shows|length }}
+					<h5>{{ venue.name }}</h5>Upcoming Shows: {{ venue.num_upcoming_shows }}
 				</div>
 			</a>
 		</li>
