--- a/projects/01_fyyur/templates/pages/show_venue.html
+++ b/projects/01_fyyur/templates/pages/show_venue.html
@@ -10,9 +10,11 @@
 			ID: {{ venue.id }}
 		</p>
 		<div class="genres">
-			{% for genre in venue.genres %}
-			<span class="genre">{{ genre }}</span>
-			{% endfor %}
+			{% if venue.genres %}
+				{% for genre in venue.genres %}
+				<span class="genre">{{ genre }}</span>
+				{% endfor %}
+			{% endif %}
 		</div>
 		<p>
 			<i class="fas fa-globe-americas"></i> {{ venue.city }}, {{ venue.state }}
@@ -29,11 +31,16 @@
 		<p>
 			<i class="fab fa-facebook-f"></i> {% if venue.facebook_link %}<a href="{{ venue.facebook_link }}" target="_blank">{{ venue.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
 		</p>
-		{% if venue.seeking_talent %}
+		<p class="edit">
+			<i class="fas fa-edit"></i> <a href="/venues/{{ venue.id }}/edit">Edit</a>
+		</p>
+		{% if venue.sticky_message %}
 		<div class="seeking">
-			<p class="lead">Currently seeking talent</p>
+			{% if venue.sticky_title %}
+			<p class="lead">{{ venue.sticky_title }}</p>
+			{% endif %}
 			<div class="description">
-				<i class="fas fa-quote-left"></i> {{ venue.seeking_description }} <i class="fas fa-quote-right"></i>
+				<i class="fas fa-quote-left"></i> {{ venue.sticky_message }} <i class="fas fa-quote-right"></i>
 			</div>
 		</div>
 		{% else %}	
@@ -46,10 +53,10 @@
 		<img src="{{ venue.image_link }}" alt="Venue Image" />
 	</div>
 </div>
-<section>
-	<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+<section></section>
+	<h2 class="monospace">{{ upcoming_shows|count }} Upcoming {% if upcoming_shows|count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
-		{%for show in venue.upcoming_shows %}
+		{%for show in upcoming_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
 				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
@@ -61,9 +68,9 @@
 	</div>
 </section>
 <section>
-	<h2 class="monospace">{{ venue.past_shows_count }} Past {% if venue.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ past_shows|count }} Past {% if past_shows|count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
-		{%for show in venue.past_shows %}
+		{%for show in past_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
 				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
