--- a/projects/01_fyyur/templates/forms/edit_artist.html
+++ b/projects/01_fyyur/templates/forms/edit_artist.html
@@ -2,8 +2,8 @@
 {% block title %}Edit Artist{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form class="form" method="post" action="/artists/{{artist.id}}/edit">
-      <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
+    <form class="form" method="post" action="/artists/{{artist_id}}/edit">
+      <h3 class="form-heading">Edit artist <em>{{ form.name.data }}</em></h3>
       <div class="form-group">
         <label for="name">Name</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
@@ -29,9 +29,13 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
       </div>
       <div class="form-group">
+        <label for="genres">Website</label>
+        {{ form.website(class_ = 'form-control', placeholder='http://', id=form.website, autofocus = true) }}
+      </div>
+      <div class="form-group">
           <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
-        </div>
+          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link, autofocus = true) }}
+      </div>
       <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
