--- a/projects/01_fyyur/templates/forms/new_show.html
+++ b/projects/01_fyyur/templates/forms/new_show.html
@@ -1,24 +1,27 @@
 {% extends 'layouts/main.html' %}
-{% block title %}New Show Listing{% endblock %}
+{% block title %}New {% if type == 'book' %}Booking Request{% else %}Show Listing{% endif %}{% endblock %}
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form">
-      <h3 class="form-heading">List a new show</h3>
+      <h3 class="form-heading">{% if type == 'book' %}Book an artist{% else %}List a new show{% endif %}</h3>
       <div class="form-group">
-        <label for="artist_id">Artist ID</label>
-        <small>ID can be found on the Artist's Page</small>
+        <label for="artist_id">Artist*</label>
         {{ form.artist_id(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
-        <label for="venue_id">Venue ID</label>
-        <small>ID can be found on the Venue's Page</small>
+        <label for="venue_id">Venue*</label>
         {{ form.venue_id(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="start_time">Start Time</label>
+          <label for="start_time">Start Time*</label>
           {{ form.start_time(class_ = 'form-control', placeholder='YYYY-MM-DD HH:MM', autofocus = true) }}
         </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+      <i>* Required fields</i>
+      {% if type == 'book' %}  
+        <input type="submit" value="Book Show" class="btn btn-primary btn-lg btn-block">
+      {% else %}
+        <input type="submit" value="List Show" class="btn btn-primary btn-lg btn-block">
+      {% endif %}
     </form>
   </div>
 {% endblock %}
