--- a/projects/01_fyyur/templates/pages/home.html
+++ b/projects/01_fyyur/templates/pages/home.html
@@ -13,6 +13,10 @@
 			<a href="/artists"><button class="btn btn-primary btn-lg">Find an artist</button></a>
 			<a href="/artists/create"><button class="btn btn-default btn-lg">Post an artist</button></a>
 		</h3>
+		<p class="lead">Book an artist for your venue.</p>
+		<h3>
+			<a href="/shows/book"><button class="btn btn-default btn-lg">Book an artist</button></a>
+		</h3>
 		<p class="lead">Publicize about your show for free.</p>
 		<h3>
 			<a href="/shows/create"><button class="btn btn-default btn-lg">Post a show</button></a>
