--- a/projects/01_fyyur/templates/forms/edit_artist.html
+++ b/projects/01_fyyur/templates/forms/edit_artist.html
@@ -5,11 +5,11 @@
     <form class="form" method="post" action="/artists/{{artist_id}}/edit">
       <h3 class="form-heading">Edit artist <em>{{ form.name.data }}</em></h3>
       <div class="form-group">
-        <label for="name">Name</label>
+        <label for="name">Name*</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label>City & State</label>
+          <label>City & State*</label>
           <div class="form-inline">
             <div class="form-group">
               {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
@@ -20,8 +20,8 @@
           </div>
       </div>
       <div class="form-group">
-          <label for="phone">Phone</label>
-          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
+          <label for="phone">Phone*</label>
+          {{ form.phone(class_ = 'form-control', placeholder='(xxx) xxx-xxxx', autofocus = true) }}
         </div>
       <div class="form-group">
         <label for="genres">Genres</label>
@@ -36,6 +36,7 @@
           <label for="genres">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link, autofocus = true) }}
       </div>
+      <i>* Required fields</i>
       <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
