--- a/projects/01_fyyur/templates/forms/edit_venue.html
+++ b/projects/01_fyyur/templates/forms/edit_venue.html
@@ -5,11 +5,11 @@
     <form class="form" method="post" action="/venues/{{venue_id}}/edit">
       <h3 class="form-heading">Edit venue <em>{{ form.name.data }}</em> <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
-        <label for="name">Name</label>
+        <label for="name">Name*</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label>City & State</label>
+          <label>City & State*</label>
           <div class="form-inline">
             <div class="form-group">
               {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
@@ -20,11 +20,11 @@
           </div>
       </div>
       <div class="form-group">
-        <label for="address">Address</label>
+        <label for="address">Address*</label>
         {{ form.address(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="phone">Phone</label>
+          <label for="phone">Phone*</label>
           {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
         </div>
       <div class="form-group">
@@ -40,6 +40,7 @@
         <label for="facebook_link">Facebook Link</label>
         {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
       </div>
+      <i>* Required fields</i>
       <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
